// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardLink component Card Tooltip snapshot 1`] = `
<div
  class="css-19vjwwd e130gayk0"
>
  <span
    class="tooltip"
  >
    <img
      alt="Crucible of Worlds"
      height="680"
      src="https://img.scryfall.com/cards/normal/en/m19/229.jpg?1531451273"
      style="display: block;"
      width="488"
    />
  </span>
  <a
    href="https://scryfall.com/card/m19/229/crucible-of-worlds?utm_source=api"
  >
    crucible of worlds
  </a>
</div>
`;

exports[`CardLink component With card name snapshot 1`] = `
<div
  class="css-19vjwwd e130gayk0"
>
  <span
    class="tooltip hide"
  >
    <img
      alt="Reveillark"
      height="680"
      src="https://img.scryfall.com/cards/normal/en/cm2/35.jpg?1534110871"
      style="display: block;"
      width="488"
    />
  </span>
  <a
    href="https://scryfall.com/card/cm2/35/reveillark?utm_source=api"
  >
    Reveillark
  </a>
</div>
`;
